--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -1,9 +1,18 @@
 @import url("https://fonts.googleapis.com/css2?family=Fugaz+One&display=swap");
 * {
   box-sizing: border-box;
-  font-size: 16px;
 }
 
+@media screen and (min-width: 800px) {
+  html {
+    font-size: 20px;
+  }
+}
+@media screen and (max-width: 800px) {
+  html {
+    font-size: 8px;
+  }
+}
 html {
   margin: 0;
   padding: 0;
@@ -11,7 +20,6 @@ html {
   overflow-x: hidden;
   width: 100vw;
   height: 100vh;
-  font-size: 20px;
 }
 
 @media screen and (max-width: 800px) {
@@ -22,8 +30,7 @@ html {
 body {
   padding: 0;
   margin: 0;
-  overflow-x: hidden;
-  overflow: hidden;
+  overflow: scroll;
   height: 100%;
   width: 100%;
   background-image: url("/assets/img/background.jpeg");
@@ -36,7 +43,7 @@ body {
   position: fixed;
   height: 100vh;
   width: 100vw;
-  background-color: rgba(0, 0, 0, 0.4);
+  background-color: rgba(0, 0, 0, 0.6);
   z-index: -1;
 }
 
@@ -110,7 +117,9 @@ button {
 }
 
 #header {
+  z-index: 4;
   width: 100vw;
+  position: fixed;
   height: 5rem;
 }
 #header .header-content {
@@ -133,21 +142,26 @@ button {
 
 section {
   padding: 1rem;
-  height: calc(100vh - 5rem);
+  height: calc(100% - 5rem);
 }
 section.landing {
-  overflow: hidden;
-  padding-bottom: 10rem;
-  height: 100%;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  flex-wrap: nowrap;
+  flex-wrap: wrap;
+  padding-bottom: 5rem;
 }
 section.landing .content {
+  background: rgba(255, 255, 255, 0.25);
+  box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
+  backdrop-filter: blur(4px);
+  -webkit-backdrop-filter: blur(4px);
+  border-radius: 10px;
+  border: 1px solid rgba(255, 255, 255, 0.18);
   z-index: 2;
   white-space: nowrap;
+  padding: 2rem 4rem;
 }
 section.landing .content #my-form {
   padding: 2rem 0;
@@ -166,32 +180,28 @@ section.landing .content #my-form button {
 }
 section.landing .phone {
   z-index: 1;
-  max-width: 20rem;
+  width: 100%;
+  max-width: 30rem;
 }
 section.landing .phone img {
   width: 100%;
 }
 
 @media screen and (max-width: 800px) {
+  section {
+    margin-top: 5rem;
+  }
   section.landing {
     padding-bottom: 1rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
     flex-wrap: nowrap;
   }
   section.landing .content {
     z-index: 2;
     white-space: normal;
-  }
-  section.landing .phone {
-    z-index: 1;
-    bottom: 0;
-    max-width: 20rem;
-  }
-  section.landing .phone img {
-    width: 100%;
   }
 }
 
